# data_market_pipeline

./: .dockerignore  .env_example  .env_exemple  .gitignore  .pre-commit-config.yaml  .python-version  .sqlfluff  ARCHITECTURE.md  BRIEF.md  CHANGELOG.md  DockerFile  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  release.yml
00_infra/: pyproject.toml
01_shared/: pyproject.toml
01_shared/shared/: __init__.py  gcs.py  secrets.py
02_extract/adzuna/: Dockerfile  config.py  pyproject.toml  scraper.py  scraper_2.py  utils.py
02_extract/france_travail/: .env.example  Dockerfile  auth.py  config.py  ft_api.py  load_ndjson_to_sqlite.py  main.py  pyproject.toml  scraper.py  utils.py
02_extract/geo/: .env.example  Dockerfile  config.py  geo_api.py  main.py  pyproject.toml  scraper.py
02_extract/sirene/: main.py  pyproject.toml
02_extraction_old/: docker-compose.yml  load_france_travail_to_sqlite.py
02_extraction_old/docs/: geo_lineage.md
02_extraction_old/pytest/: test_extract_geo_api.py
02_extraction_old/sirene_api/: sirene_streamlit.py  sirene_streamlit_evol.py  test_sirene.py
03_transform/: Dockerfile  SCHEMA_TRANSFORM.md  load_geo_data.py  main_intermediate_dev.db  pyproject.toml
03_transform/dbt/: .user.yml  dbt_project.yml  profiles.yml
03_transform/dbt/models/: sources.yml
03_transform/dbt/models/intermediate_dev/: int_adzuna_offres.sql  int_employer_candidates.sql  int_ft_offres.sql  int_ft_offres_employers_matched.sql  int_ft_offres_enriched.sql  int_ft_offres_geo.sql  int_geo_communes.sql  schema.yml
03_transform/dbt/tests/: assert_all_offers_have_dept.sql
03_transform/scratch/: get_all_info.py  get_db_info.py  inspect_db.py
03_transform/src/03_transform/: __init__.py
_developpements/: analyze_ft_fields.py  build_ft_offer_schema.py  france_travail_offer_schema.md  load_ft_to_sqlite.py
_old/: CI_CD_MOCK_GITHUB_ACTIONS.yml  load_france_travail_to_sqlite.py  main.py  pyproject.toml
_old/config/: __init__.py  settings.py
_old/dbt/: .user.yml  COMMANDES_DBT.md  RAPPORT_STACK_DBT.md  dbt_project.yml  profiles.yml
_old/dbt/macros/: select_clean_flattened_dict_columns.sql
_old/dbt/models/: sources.yml
_old/dbt/models/marts/gold/: gold_data_engineer_marche_geo.sql  gold_data_engineer_top_entreprises.sql  schema.yml
_old/dbt/tests/: test_gold_data_engineer_marche_geo_pct_bounds.sql  test_gold_data_engineer_top_entreprises_dates_coherence.sql  test_int_ft_offre_geo_silver_dates_coherence.sql  test_int_offres_par_region_contrat_silver_part_offres_pct_bounds.sql
_old/explore_data/: analyze_offres.py
_old/extract_francetravail_api/: extract_francetravail_api.py
_old/geo_api/: extract_geo_api.py  load_geo_to_sqlite.py
_old/sirene_api/: exploration.ipynb  sirene_streamlit.py  sirene_streamlit_evol.py  test_sirene.py
_old/sql/: france_travail_offres_views.sql
chris/: brief.md
chris/sirene/: sirene.py  split_stock_parquet.py
data/: geo.sqlite
data/data_geo/: epcis.json
data/france_travail_offres/: offres_data_market_20260312_141036.json  offres_data_market_20260312_144524.json  offres_data_market_20260312_152716.json  offres_data_market_20260312_154734.json  offres_data_market_20260312_162637.json  offres_data_market_20260312_164038.json  offres_data_market_20260312_164504.json  offres_data_market_20260312_164530.json  offres_data_market_20260312_164713.json
data/france_travail_referentiels/: ref_domaines_rome.json  ref_langues.json  ref_permis.json  (+4 more)
docs/: geo_lineage.md
explore_data/: explore_data.ipynb
extract_francetravail_api/: extract_francetravail_api.py  extract_francetravail_api_old.py
geo_api/: extract_geo_api.py  geo_decoupage_api.py  load_geo_to_sqlite.py  transform_geo_json.py
get_api/: test_geo_decoupage_api.py
n8n/: init DB.json.txt  www.societe.com by bucket.json.txt
pytest/: test_extract_geo_api.py  test_geo_decoupage_api.py
scripts/: load_geo_to_sqlite.py  test.py
sirene_api/: exploration.ipynb  sirene_streamlit.py  test_sirene.py
sirene_api_chris/: fetch_sirene.py
sql/: geo_views.sql  staging_geo.sql
test_postgres_setup/: README.md  docker-compose.yml  init.sql  loader.py  test_db_loader.py
(+96 files in other folders)
