[project]
name = "data-market-pipeline"
version = "0.1.0"
description = "CEJTL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
