[project]
name = "data-market-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-sqlite>=1.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[tool.uv.workspace]
members = [
    "00_infra",
    "01_shared",
    "02_extract/france_travail",
    "02_extract/geo",
    "02_extract/sirene",
]
