[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JeanThomasMiquelot", email = "miquelot.jeanthomas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.27.0",
    "google-cloud-storage>=3.10.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared"]

[tool.setuptools.package-data]
shared = ["py.typed"]
