[project]
name = "03-transform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JeanThomasMiquelot", email = "miquelot.jeanthomas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
