[project]
name = "03-transform"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JeanThomasMiquelot", email = "miquelot.jeanthomas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "dbt-core>=1.11.8",
    "dbt-sqlite>=1.10.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
