[project]
name = "02-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JeanThomasMiquelot", email = "miquelot.jeanthomas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pyarrow>=23.0.1",
]
